<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:gravity="left" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:textStyle="bold"
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:text="@string/five"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="20" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:text="@string/ten"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="20" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:text="@string/fifteen"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="20" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:text="@string/thirty"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="20" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:text="@string/fifty"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="20" />

    </LinearLayout>

</LinearLayout>