<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.GameHostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            app:titleTextColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/client_list"
        android:layout_weight="50"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_weight="50"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/bowl"
            android:src="@drawable/ic_bowl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/coin_fifteen"
            android:contentDescription="@string/fifteen"
            android:layout_width="@dimen/coin_size"
            android:layout_height="@dimen/coin_size"
            android:src="@drawable/ic_fifteen"
            app:layout_constraintLeft_toLeftOf="@id/bowl"
            app:layout_constraintRight_toRightOf="@id/bowl"
            app:layout_constraintTop_toTopOf="@id/bowl"
            app:layout_constraintBottom_toBottomOf="@id/bowl"/>

        <ImageView
            android:id="@+id/coin_thirty"
            android:contentDescription="@string/thirty"
            android:layout_width="@dimen/coin_size"
            android:layout_height="@dimen/coin_size"
            android:src="@drawable/ic_thirty"
            app:layout_constraintLeft_toRightOf="@id/coin_fifteen"
            app:layout_constraintRight_toRightOf="@id/bowl"
            app:layout_constraintTop_toTopOf="@id/bowl"
            app:layout_constraintBottom_toBottomOf="@id/bowl"/>

        <ImageView
            android:id="@+id/coin_ten"
            android:contentDescription="@string/ten"
            android:layout_width="@dimen/coin_size"
            android:layout_height="@dimen/coin_size"
            android:src="@drawable/ic_ten"
            app:layout_constraintLeft_toLeftOf="@id/bowl"
            app:layout_constraintRight_toLeftOf="@id/coin_fifteen"
            app:layout_constraintTop_toTopOf="@id/bowl"
            app:layout_constraintBottom_toBottomOf="@id/bowl"/>


        <ImageView
            android:id="@+id/coin_five"
            android:contentDescription="@string/five"
            android:layout_width="@dimen/coin_size"
            android:layout_height="@dimen/coin_size"
            android:src="@drawable/ic_five"
            app:layout_constraintLeft_toLeftOf="@id/bowl"
            app:layout_constraintRight_toRightOf="@id/bowl"
            app:layout_constraintTop_toTopOf="@id/bowl"
            app:layout_constraintBottom_toTopOf="@id/coin_fifteen"/>


        <ImageView
            android:id="@+id/coin_fifty"
            android:contentDescription="@string/fifty"
            android:layout_width="@dimen/coin_size"
            android:layout_height="@dimen/coin_size"
            android:src="@drawable/ic_fifty"
            app:layout_constraintLeft_toLeftOf="@id/bowl"
            app:layout_constraintRight_toRightOf="@id/bowl"
            app:layout_constraintTop_toBottomOf="@id/coin_fifteen"
            app:layout_constraintBottom_toBottomOf="@id/bowl"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
